--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+
+  android_alarm_manager: '>=0.4.5+17 <2.0.0'
 
 dev_dependencies:
   flutter_test:
