--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.0
 
   android_alarm_manager: '>=0.4.5+17 <2.0.0'
+  flutter_local_notifications: ^3.0.1+4
 
 dev_dependencies:
   flutter_test:
