--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   device_info: ^0.4.2+4
   rxdart: ^0.24.0
   flutter_native_timezone: ^1.0.4
-
+  shared_preferences: ^0.5.12+4
+  just_audio: ^0.5.6
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +55,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - media/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
