--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_time_picker_spinner: ^1.0.6+1
   # time_range: ^0.5.0
   date_format: ^1.0.9
+  permission_handler: ^5.0.1+1
 
 dev_dependencies:
   flutter_test:
