--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -65,5 +65,9 @@
     <!-- for android_alarm_manager -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <!--
+      android.permission.VIBRATE
+      android.permission.MODIFY_AUDIO_SETTINGS
+    -->
 
 </manifest>
