--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_native_timezone: ^1.0.4
   shared_preferences: ^0.5.12+4
   just_audio: ^0.5.6
+  audio_session: ^0.0.9
   # flutter_duration_picker: "^1.0.0"
   # datetime_picker_formfield: ^1.0.0
   flutter_time_picker_spinner: ^1.0.6+1
