Rename to Mindful Notifier

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: remindfulbell
+name: mindfulnotifier
 description: A mindfulness-based reminder system
 
 # The following line prevents the package from being accidentally published to
