--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   logger_flutter:
     git: https://github.com/ewertonrp/logger_flutter.git
   # logger_flutter: ^0.7.1
+  flutter_background_service: ^0.0.1+19
 
 dev_dependencies:
   flutter_test:
