--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   flutter_time_picker_spinner: ^1.0.6+1
   # time_range: ^0.5.0
   date_format: ^1.0.9
-  permission_handler: ^5.0.1+1
+  #permission_handler: ^5.0.1+1
   get:
   logger: ^0.9.4
   logger_flutter:
