Add reminders configuration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
     git: https://github.com/ewertonrp/logger_flutter.git
   # logger_flutter: ^0.7.1
   flutter_background_service: ^0.0.1+19
+  rflutter_alert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
