--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,19 +30,23 @@ dependencies:
 
   android_alarm_manager: '>=0.4.5+17 <2.0.0'
   flutter_local_notifications: ^3.0.2
+  date_format: ^1.0.9
   device_info: ^0.4.2+4
   rxdart: ^0.24.0
   flutter_native_timezone: ^1.0.4
   shared_preferences: '>=0.5.12+4 <2.0.0'
-  just_audio: ^0.5.6
-  audio_session: ^0.0.9
-  date_format: ^1.0.9
-  #permission_handler: ^5.0.1+1
   get: ^3.23.1
   logger: ^0.9.4
   logger_flutter:
     git: https://github.com/ewertonrp/logger_flutter.git
   # logger_flutter: ^0.7.1
+
+  # For audio:
+  just_audio: ^0.5.6
+  audio_session: ^0.0.9
+  #audio_service: ^0.15.3
+
+  #permission_handler: ^5.0.1+1
   #flutter_background_service: ^0.0.1+19
   rflutter_alert: ^1.1.0
   flutter_html: ^1.1.1
