--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,8 @@ dependencies:
   #audio_service: ^0.15.3
 
   file_picker: ^2.1.4
-  #file_picker: ^2.0.8+1
+  package_info: '>=0.4.3+2 <2.0.0'
+  path_provider: ^1.6.24
 
   #permission_handler: ^5.0.1+1
   #flutter_background_service: ^0.0.1+19
