--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,3 +2,5 @@ org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
 android.enableR8=true
+# for https://issuetracker.google.com/issues/147096055:
+android.bundle.enableUncompressedNativeLibs=false
