--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,10 +50,9 @@ dependencies:
   package_info: '>=0.4.3+2 <2.0.0'
   path_provider: ^1.6.24
 
-  #permission_handler: ^5.0.1+1
+  permission_handler: ^5.0.1+1
   #flutter_background_service: ^0.0.1+19
   rflutter_alert: ^1.1.0
-  #flutter_html: ^1.1.1
   flutter_markdown: ^0.5.1
   url_launcher: ^5.7.10
 
