--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,24 +37,25 @@ dependencies:
   shared_preferences: '>=0.5.12+4 <2.0.0'
   get: ^3.23.1
   logger: ^0.9.4
-  logger_flutter:
-    git: https://github.com/ewertonrp/logger_flutter.git
+  # logger_flutter:
+  #   git: https://github.com/ewertonrp/logger_flutter.git
   # logger_flutter: ^0.7.1
 
   # For audio:
   just_audio: ^0.5.6
   audio_session: ^0.0.9
-  #audio_service: ^0.15.3
+  # audio_service: ^0.15.3
 
   file_picker: ^2.1.4
   package_info: '>=0.4.3+2 <2.0.0'
   path_provider: ^1.6.24
 
   permission_handler: ^5.0.1+1
-  #flutter_background_service: ^0.0.1+19
+  # flutter_background_service: ^0.0.1+19
   rflutter_alert: ^1.1.0
   flutter_markdown: ^0.5.1
   url_launcher: ^5.7.10
+  # synchronized: ^2.2.0+2
 
 dev_dependencies:
   flutter_test:
