--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,13 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+2
+# 
+# My notes on Android:
+# versionCode: Internal version number. Must always be increasing.
+#              This number is used only to determine whether one version is more recent than another,
+#              with higher numbers indicating more recent versions
+# versionName: Customer-visible version string
+version: 1.0.1+3
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
