--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 #              This number is used only to determine whether one version is more recent than another,
 #              with higher numbers indicating more recent versions
 # versionName: Customer-visible version string
-version: 1.0.10+13
+version: 1.0.11+15
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -51,11 +51,11 @@ dependencies:
   audio_session: ^0.1.0
   # audio_service: ^0.15.3
 
-  file_picker: ^3.0.0
+  file_picker: ^3.0.1
   package_info: ^2.0.0
   path_provider: ^2.0.1
 
-  permission_handler: ^6.1.1
+  # permission_handler: ^6.1.3
   # flutter_background_service: ^0.0.1+19
   rflutter_alert: ^2.0.2
   flutter_markdown: ^0.6.1
