--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 #              This number is used only to determine whether one version is more recent than another,
 #              with higher numbers indicating more recent versions
 # versionName: Customer-visible version string
-version: 1.0.11+15
+version: 1.0.11+16
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -54,6 +54,7 @@ dependencies:
   file_picker: ^3.0.1
   package_info: ^2.0.0
   path_provider: ^2.0.1
+  share: ^2.0.1
 
   # permission_handler: ^6.1.3
   # flutter_background_service: ^0.0.1+19
