--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   rxdart: ^0.26.0
   flutter_native_timezone: ^1.0.4
   shared_preferences: ^2.0.5
-  get: ^4.1.1
+  get: ^4.1.4
   logger: ^0.9.4
 
   # For audio:
@@ -57,6 +57,8 @@ dependencies:
   package_info: ^2.0.0
   path_provider: ^2.0.1
   share: ^2.0.1
+  dropdown_search: ^0.6.1
+  # flutter_treeview: ^1.0.3+2
 
   # permission_handler: ^6.1.3
   # flutter_background_service: ^0.0.1+19
