--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 #              This number is used only to determine whether one version is more recent than another,
 #              with higher numbers indicating more recent versions
 # versionName: Customer-visible version string
-version: 1.0.19+31
+version: 1.0.20+37
 
 environment:
+  # sdk: ">=2.12.0 <3.0.0"
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
@@ -32,38 +33,38 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.4
 
   # https://pub.dev/packages/<package>
 
-  android_alarm_manager: ^2.0.1
-  flutter_local_notifications: ^6.0.0
-  date_format: ^2.0.2
-  device_info: ^2.0.1
-  rxdart: ^0.26.0
+  android_alarm_manager_plus: ^2.0.3
+  flutter_local_notifications: ^9.0.2
+  date_format: ^2.0.4
+  device_info_plus: ^3.1.1
+  rxdart: ^0.27.2
   flutter_native_timezone: ^2.0.0
-  shared_preferences: ^2.0.6
-  get: ^4.1.4
-  logger: ^1.0.0
-  equatable: ^2.0.2
+  shared_preferences: ^2.0.8
+  get: ^4.3.8
+  logger: ^1.1.0
+  equatable: ^2.0.3
 
   # For audio:
-  just_audio: ^0.7.4
-  audio_session: ^0.1.0
+  just_audio: ^0.9.16
+  audio_session: ^0.1.6+1
   # audio_service: ^0.15.3
-  sound_mode: ^1.0.2
+  sound_mode: ^2.0.1
 
 
-  file_picker: ^3.0.2+2
-  package_info: ^2.0.1
-  path_provider: ^2.0.2
-  share: ^2.0.2
-  dropdown_search: ^0.6.1
+  file_picker: ^4.2.1
+  package_info_plus: ^1.3.0
+  path_provider: ^2.0.6
+  share_plus: ^3.0.4
+  dropdown_search: ^2.0.0
 
   # flutter_background_service: ^0.0.1+19
-  rflutter_alert: ^2.0.2
-  flutter_markdown: ^0.6.2
-  url_launcher: ^6.0.4
+  rflutter_alert: ^2.0.4
+  flutter_markdown: ^0.6.8
+  url_launcher: ^6.0.12
   battery_optimization: ^0.1.0
 
 dev_dependencies:
