WIP: Converting datastore to hive

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   logger: ^1.1.0
   equatable: ^2.0.3
 
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+
   # For audio:
   just_audio: ^0.9.16
   audio_session: ^0.1.6+1
