--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 #              This number is used only to determine whether one version is more recent than another,
 #              with higher numbers indicating more recent versions
 # versionName: Customer-visible version string
-version: 1.0.22+42
+version: 1.0.23+43
 
 environment:
   # sdk: ">=2.12.0 <3.0.0"
@@ -69,6 +69,7 @@ dependencies:
   flutter_markdown: ^0.6.8
   url_launcher: ^6.0.12
   battery_optimization: ^0.1.0
+  minimize_app: ^0.1.1
 
 dev_dependencies:
   flutter_test:
